// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    aria-roledescription="carousel"
    class="relative w-full max-w-xs"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex justify-center"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              1
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              2
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              3
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              4
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              5
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel stories snapshot > Vertical story renders and matches snapshot 1`] = `
<div>
  <div
    aria-roledescription="carousel"
    class="relative w-full max-w-xs"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex flex-col items-center -mt-1 h-[200px]"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              1
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              2
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              3
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              4
            </span>
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg"
          >
            <span
              class="text-4xl font-semibold"
            >
              5
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel stories snapshot > WithImages story renders and matches snapshot 1`] = `
<div>
  <div
    aria-roledescription="carousel"
    class="relative w-full max-w-xs"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex justify-center"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
          >
            <img
              alt="Slide 1"
              class="w-full h-full object-cover"
              src="https://images.unsplash.com/photo-1588345921523?w=400&h=400&fit=crop"
            />
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
          >
            <img
              alt="Slide 2"
              class="w-full h-full object-cover"
              src="https://images.unsplash.com/photo-1588345921524?w=400&h=400&fit=crop"
            />
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4"
          data-slot="carousel-item"
          role="group"
        >
          <div
            class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
          >
            <img
              alt="Slide 3"
              class="w-full h-full object-cover"
              src="https://images.unsplash.com/photo-1588345921525?w=400&h=400&fit=crop"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
